@@ -1,3 +1,9 @@
+2011-02-18  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/Core.pm: Merged from trunk. Verify that there is a
+	  data server running when computing server stats. Thanks to Tadashi
+	  Kaneda.
+
 2011-02-16  Ramon Novoa  <rnovoa@artica.es>
 
 	* lib/PandoraFMS/DataServer.pm: Merged from trunk. Do not update the
